src/components/AppFrame/AppFrame.module.css
.appFrame {
    display: flex;
}

.content {
    flex-grow: 1;
    padding: 20px;
}

.navbar {
    position: fixed;
    width: rem(80px);
    height: rem(700px);
    padding: var(--mantine-spacing-md);
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    border-right: rem(1px) solid
        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
}

.navbarMain {
    flex: 1;
    margin-top: rem(50px);
}

.customLabel {
    width: rem(60px);
    height: rem(60px);
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 22px;
    font-weight: 600;
    color: rgb(255, 64, 0);
}

.link {
    width: rem(60px);
    height: rem(60px);
    border-radius: var(--mantine-radius-md);
    display: flex;
    align-items: center;
    justify-content: center;
    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));

    &:hover {
        background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
    }

    &[data-active] {
        &,
        &:hover {
            background-color: var(--mantine-color-blue-light);
            color: var(--mantine-color-blue-light-color);
        }
    }
}

